@startuml
title List Admin Reviews - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class Review <<model>> {
  -id: String {UUID}
  -userId: String
  -attractionId: String
  -rating: Int
  -createdAt: DateTime
  --
  +isVisible(): Boolean
  +isAuthoredBy(userId: String): Boolean
}

class User <<model>> {
  -id: String {UUID}
  -email: String {unique}
  -fullName: String
  -status: UserStatus = ACTIVE
  -createdAt: DateTime
  --
  +isVerified(): Boolean
  +isActive(): Boolean
}

class Attraction <<model>> {
  -id: String {UUID}
  -partnerId: String
  -title: String
  -status: AttractionStatus = DRAFT
  -createdAt: DateTime
  --
  +isPublished(): Boolean
}

User "1" -- "0..*" Review : reviews
Attraction "1" -- "0..*" Review : reviews

@enduml
